# facematch-c-

./: .dockerignore  .gitignore  API_COMPATIBILITY.md  CMakeLists.txt  CMakeLists.txt.bak  CMakeLists.txt.test  CMakeLists_full.txt  CMakeLists_lightweight.txt  CMakeLists_optimized.txt  CMakeLists_original.txt  CMakeLists_simple.txt  CMakeLists_simple_new.txt  CMakeLists_working.txt  DOCKER_TROUBLESHOOTING.md  Dockerfile  Dockerfile.optimized  Dockerfile.prod  Dockerfile.robust  Dockerfile.simple  IMPLEMENTATION_SUMMARY.md  README.md  README_OPTIMIZED.md  VIDEO_LIVENESS_API.md  base-image-dependencies.txt  build_and_test_lightweight.sh  build_optimized.sh  build_simple.sh  diagnostic_test.cpp  docker-compose.yml  docker_build.sh  download_models.sh  dump.rdb  env.example  lightweight_server.cpp  lightweight_web_server.cpp  optimized_server.cpp  optimized_server_opencv.cpp  optimized_test.cpp  setup_environment.sh  setup_local.sh  (+14 more)
.github/workflows/: ci.yml  deploy.prod.yml  docker-build.yml  staging-build.yml
build_lightweight/: diagnostic_test  optimized_test  test_lightweight
build_test/: CPackConfig.cmake  CPackSourceConfig.cmake  lightweight_web_server  test_lightweight
src/: challenge_generator.cpp  challenge_generator.hpp  challenge_verifier.cpp  challenge_verifier.hpp  face_recognizer.cpp  face_recognizer.hpp  image_processor.cpp  image_processor.hpp  liveness_detector.cpp  liveness_detector.hpp  main.cpp  redis_cache.cpp  redis_cache.hpp  video_liveness_detector.cpp  video_liveness_detector.hpp  web_server.cpp  web_server.hpp
src/blazeface/: blazeface_detector.cpp  blazeface_detector.hpp  blazeface_opencv.cpp  blazeface_opencv.hpp
src/lightweight/: lightweight_video_detector.cpp  lightweight_video_detector.hpp  lightweight_video_detector_simple.cpp  lightweight_video_detector_simple.hpp
